update day 1 notebooks

--- a/day1/notebooks/adk_single_agent.ipynb
+++ b/day1/notebooks/adk_single_agent.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "If you don't have one already, create an [API key in Google AI Studio](https://aistudio.google.com/app/api-keys).\n",
     "\n",
-    "**2. Add the key to as environment variable\n",
+    "**2. Add the key to as environment variable**\n",
     "\n",
     "`GOOGLE_API_KEY`"
    ]
