Refactor agent-tools notebook: remove output clutter and update kernel specifications

--- a/day2/notebooks/agent-tools.ipynb
+++ b/day2/notebooks/agent-tools.ipynb
@@ -89,20 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# install the Google ADK library\n",
     "%pip install google-adk --quiet"
@@ -129,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:02:52.485424Z",
@@ -141,15 +130,7 @@
     "id": "WovV4AKMeBNX",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Google API key obtained successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import dotenv\n",
@@ -184,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:02:52.582116Z",
@@ -197,15 +178,7 @@
     "outputId": "399d0f3f-a20d-48b5-9792-c3b065aaef49",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ ADK components imported successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from google.genai import types\n",
     "\n",
@@ -230,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.37469Z",
@@ -241,15 +214,7 @@
     },
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Helper functions defined.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def show_python_code_and_result(response):\n",
     "    for i in range(len(response)):\n",
@@ -285,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.384056Z",
@@ -372,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.418967Z",
@@ -385,16 +350,7 @@
     "outputId": "a6ff0678-05c2-4393-9acd-02be12651a13",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Fee lookup function created\n",
-      "💳 Test: {'status': 'success', 'fee_percentage': 0.02}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pay attention to the docstring, type hints, and return value.\n",
     "def get_fee_for_payment_method(method: str) -> dict:\n",
@@ -444,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.444647Z",
@@ -457,16 +413,7 @@
     "outputId": "83de0f08-377d-4858-87c5-9e7c9f82ffc5",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Exchange rate function created\n",
-      "💱 Test: {'status': 'success', 'rate': 0.93}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_exchange_rate(base_currency: str, target_currency: str) -> dict:\n",
     "    \"\"\"Looks up and returns the exchange rate between two currencies.\n",
@@ -529,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.472028Z",
@@ -542,18 +489,7 @@
     "outputId": "31ea0ec7-7bd9-4e92-8ec8-4ee88e6e6a16",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Currency agent created with custom function tools\n",
-      "🔧 Available tools:\n",
-      "  • get_fee_for_payment_method - Looks up company fee structure\n",
-      "  • get_exchange_rate - Gets current exchange rates\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Currency agent with custom function tools\n",
     "currency_agent = LlmAgent(\n",
@@ -583,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.502142Z",
@@ -596,41 +532,7 @@
     "outputId": "ae3ad5ab-eab5-40ba-acd6-34d8b9e2bf5b",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " ### Created new session: debug_session_id\n",
-      "\n",
-      "User > I want to convert 500 US Dollars to Euros using my Platinum Credit Card. How much will I receive?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: there are non-text parts in the response: ['function_call', 'function_call'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['function_call', 'function_call'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "currency_agent > You will receive 455.70 Euros.\n",
-      "\n",
-      "Here's how that's calculated:\n",
-      "\n",
-      "1. The transaction fee for using a platinum credit card is 2.00%.\n",
-      "2. The fee amount is 10.00 USD (500 USD * 0.02).\n",
-      "3. The amount remaining after the fee is 490.00 USD (500 USD - 10 USD).\n",
-      "4. The exchange rate from USD to EUR is 0.93.\n",
-      "5. The final amount in Euros is 455.70 EUR (490.00 USD * 0.93).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the currency agent\n",
     "currency_runner = InMemoryRunner(agent=currency_agent)\n",
@@ -679,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:50.614726Z",
@@ -738,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:50.622899Z",
@@ -751,19 +653,7 @@
     "outputId": "8eed9464-5a4d-4791-c221-40641ec1a6f7",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Enhanced currency agent created\n",
-      "🎯 New capability: Delegates calculations to specialist agent\n",
-      "🔧 Tool types used:\n",
-      "  • Function Tools (fees, rates)\n",
-      "  • Agent Tool (calculation specialist)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "enhanced_currency_agent = LlmAgent(\n",
     "    name=\"enhanced_currency_agent\",\n",
@@ -801,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:50.673652Z",
@@ -820,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:50.707056Z",
@@ -833,55 +723,7 @@
     "outputId": "8edff423-f7e5-4dff-9c48-ba49ab726c99",
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " ### Continue session: debug_session_id\n",
-      "\n",
-      "User > Convert 1,250 USD to INR using a Bank Transfer. Show me the precise calculation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: there are non-text parts in the response: ['function_call'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "/Users/ademola-ari/.local/share/virtualenvs/ademola-ari-7P5-MZCT/lib/python3.12/site-packages/google/genai/_common.py:613: UserWarning: TOO_MANY_TOOL_CALLS is not a valid FinishReason\n",
-      "  warnings.warn(f'{value} is not a valid {cls.__name__}')\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result', 'executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
-      "Warning: there are non-text parts in the response: ['executable_code', 'code_execution_result'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enhanced_currency_agent > The fee for a bank transfer is 1% of the transaction amount. The exchange rate from USD to INR is 83.58.\n",
-      "\n",
-      "Here's the breakdown of the calculation:\n",
-      "\n",
-      "1.  **Original Amount:** 1,250 USD\n",
-      "2.  **Fee Percentage:** 1%\n",
-      "3.  **Fee Amount:** 12.50 USD (1250 \\* 0.01)\n",
-      "4.  **Amount after Fee:** 1,237.50 USD (1250 - 12.50)\n",
-      "5.  **Exchange Rate:** 83.58 INR per USD\n",
-      "6.  **Final Converted Amount:** 103,430.25 INR (1237.50 \\* 83.58)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the enhanced agent\n",
     "response = await enhanced_runner.run_debug(\n",
@@ -905,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:55.239171Z",
@@ -916,15 +758,7 @@
     },
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated Python Response >>  Final Converted Amount: 103430.25 INR\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "show_python_code_and_result(response)"
    ]
@@ -1096,7 +930,7 @@
     "\n",
     "You've built the foundation of agent tool mastery.\n",
     "\n",
-    "Ready for the next challenge? Continue to the next notebook to learn about **tool patterns**!"
+    "Ready for the next challenge? Continue to the [next notebook to learn about tool patterns](agent-tools-best-practices.ipynb)!"
    ]
   }
  ],
@@ -1113,7 +947,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "ademola-ari-7P5-MZCT",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1127,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
