rename for easier tracking

--- a/day3/notebooks/2-agent-memory.ipynb
+++ b/day3/notebooks/2-agent-memory.ipynb
@@ -1327,7 +1327,7 @@
     "\n",
     "**🎯 Next Steps:**\n",
     "\n",
-    "Ready for Day 4? Learn how to **implement Observability and Evaluate your agents** to ensure they're working as intended in production!"
+    "Ready for Day 4? Learn how to [**implement Observability and Evaluate your agents**](./../../day4) to ensure they're working as intended in production!"
    ]
   }
  ],
