day file update

--- a/day2/notebooks/1-agent-tools.ipynb
+++ b/day2/notebooks/1-agent-tools.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:02:52.582116Z",
@@ -178,7 +178,15 @@
     "outputId": "399d0f3f-a20d-48b5-9792-c3b065aaef49",
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ ADK components imported successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "from google.genai import types\n",
     "\n",
@@ -203,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.37469Z",
@@ -214,7 +222,15 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Helper functions defined.\n"
+     ]
+    }
+   ],
    "source": [
     "def show_python_code_and_result(response):\n",
     "    for i in range(len(response)):\n",
@@ -250,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.384056Z",
@@ -337,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.418967Z",
@@ -350,7 +366,16 @@
     "outputId": "a6ff0678-05c2-4393-9acd-02be12651a13",
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Fee lookup function created\n",
+      "💳 Test: {'status': 'success', 'fee_percentage': 0.02}\n"
+     ]
+    }
+   ],
    "source": [
     "# Pay attention to the docstring, type hints, and return value.\n",
     "def get_fee_for_payment_method(method: str) -> dict:\n",
@@ -400,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.444647Z",
@@ -413,7 +438,16 @@
     "outputId": "83de0f08-377d-4858-87c5-9e7c9f82ffc5",
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Exchange rate function created\n",
+      "💱 Test: {'status': 'success', 'rate': 0.93}\n"
+     ]
+    }
+   ],
    "source": [
     "def get_exchange_rate(base_currency: str, target_currency: str) -> dict:\n",
     "    \"\"\"Looks up and returns the exchange rate between two currencies.\n",
@@ -476,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.472028Z",
@@ -489,7 +523,18 @@
     "outputId": "31ea0ec7-7bd9-4e92-8ec8-4ee88e6e6a16",
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Currency agent created with custom function tools\n",
+      "🔧 Available tools:\n",
+      "  • get_fee_for_payment_method - Looks up company fee structure\n",
+      "  • get_exchange_rate - Gets current exchange rates\n"
+     ]
+    }
+   ],
    "source": [
     "# Currency agent with custom function tools\n",
     "currency_agent = LlmAgent(\n",
@@ -519,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-10T22:03:47.502142Z",
@@ -532,7 +577,39 @@
     "outputId": "ae3ad5ab-eab5-40ba-acd6-34d8b9e2bf5b",
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " ### Created new session: debug_session_id\n",
+      "\n",
+      "User > I want to convert 500 US Dollars to Euros using my Platinum Credit Card. How much will I receive?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: there are non-text parts in the response: ['function_call'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
+      "Warning: there are non-text parts in the response: ['function_call'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "currency_agent > You will receive 450.8 EUR.\n",
+      "\n",
+      "Here's how that amount was calculated:\n",
+      "\n",
+      "1. **Fee deduction:** A 2% fee is applied to the initial 500 USD. This fee amounts to 10 USD (500 * 0.02).\n",
+      "2. **Remaining amount:** After deducting the fee, you have 490 USD remaining (500 - 10).\n",
+      "3. **Currency conversion:** The remaining 490 USD is converted to EUR at an exchange rate of 0.93. This results in 455.7 EUR (490 * 0.93).\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the currency agent\n",
     "currency_runner = InMemoryRunner(agent=currency_agent)\n",
