--- a/capstone/notebooks/AgentFleet_Demonstration.ipynb
+++ b/capstone/notebooks/AgentFleet_Demonstration.ipynb
@@ -1544,8 +1544,18 @@
    "source": [
     "## 7. Demo Summary\n",
     "\n",
-    "This demonstration showcased the AgentFleet multi-agent emergency response system, highlighting how specialized AI agents can collaborate to ingest, verify, summarize, triage, dispatch, and visualize emergency incidents. By automating critical tasks and providing actionable insights, AgentFleet aims to enhance community safety and support first responders in saving lives.\n"
+    "This demonstration showcased the AgentFleet multi-agent emergency response system, highlighting how specialized AI agents can collaborate to ingest, verify, summarize, triage, dispatch, and visualize emergency incidents. By automating critical tasks and providing actionable insights, AgentFleet aims to enhance community safety and support first responders in saving lives.\n",
+    "\n",
+    "### Watch the Full Demo Video By Clicking Below:\n",
+    "\n",
+    "[![Watch the Demo Video](../demo/demo_thumbnail.png)](https://youtu.be/_ypfw6vkB-k)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23bf110f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
